# dev-practice

./: .editorconfig  .gitignore  pyproject.toml
python/assistant-on-fastapi/: .gitignore  Makefile  Pipfile  README.md  pylintrc.toml  pyproject.toml
python/assistant-on-fastapi/app/: constants.py  main.py
python/assistant-on-fastapi/app/config/: .env  config.py  dependency_injection.py  log_settings.py  logging.json  object_factory.py
python/assistant-on-fastapi/app/db/: database.py  document_embedding_repository.py  repository.py  vector_type.py
python/assistant-on-fastapi/app/db/models/: __init__.py  document_embedding.py
python/assistant-on-fastapi/app/errors/: app_exception.py  db_exceptions.py  error_code.py
python/assistant-on-fastapi/app/internal/: document_embedding_facade.py  food_predict_api_facade.py
python/assistant-on-fastapi/app/internal/mapper/: document_embedding_mapper.py
python/assistant-on-fastapi/app/logging/: access_log.py
python/assistant-on-fastapi/app/ml/: food_additives.ipynb  foodb-scikit-learn-classification.ipynb  foodb-tf-classification.ipynb  foodb.ipynb  foodb_helper.py
python/assistant-on-fastapi/app/ml/models/: foodb-3feat.pkl
python/assistant-on-fastapi/app/models/: document_embedding.py  foodb.py
python/assistant-on-fastapi/app/routers/: document_embedding_router.py  food_router.py
python/assistant-on-fastapi/src/app/: __init__.py  main.py
python/assistant-on-fastapi/src/app/chemistry/: calculator_facade.py
python/assistant-on-fastapi/src/app/config/: config.py  dependency_injection.py  log_settings.py  object_factory.py
python/assistant-on-fastapi/src/app/db/: database.py  document_embedding_repository.py  repository.py  vector_type.py
python/assistant-on-fastapi/src/app/errors/: app_exception.py  chemistry_api_exception.py  db_exceptions.py  error_code.py
python/assistant-on-fastapi/src/app/internal/: document_embedding_facade.py  food_predict_api_facade.py
python/assistant-on-fastapi/src/app/logging/: access_log.py
python/assistant-on-flask/: .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
python/assistant-on-flask/app/: app.py
python/assistant-on-flask/app/api/: predict_controller.py
python/assistant-on-flask/app/config/: app_config.py  gunicorn.conf.py
python/assistant-on-flask/app/ml/: predictor.py
python/assistant-on-flask/app/models/: gru_model.keras  lstm_model.keras
python/assistant-on-flask/helm/: README.md
python/assistant-on-flask/helm/assistant-on-flask/: Chart.yaml  values.yaml
python/assistant-on-flask/src/app/: app.py
python/assistant-on-flask/src/app/util/: util.py
(+999 files in other folders)
