[project]
name = "assistant-on-flask"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "flask>=3.1.2",
    "flask-healthz>=1.0.1",
    "gunicorn>=23.0.0",
    "rich>=14.1.0",
    "numpy==1.26.4",
    "scikit-learn>=1.7.1",
    "opentelemetry-distro>=0.57b0",
    "pip>=25.2",
    "opentelemetry-instrumentation>=0.57b0",
    "opentelemetry-exporter-otlp>=1.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
# Exclude specific files or directories from linting
exclude = []

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
